# Loanet-Stellar

./: .eslintrc.cjs  .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOY_CONTRACTS.md  DEPLOY_MOCK_USDC.md  GUIA_CONFIGURAR_ENV.md  GUIA_PASO_2.md  INTEGRATION_TESTING.md  README.md  REDEPLOY_IDENTITY_REGISTRY.md  TESTING.md  VERCEL_DEPLOY.md  build-contract.ps1  deploy-all-contracts.ps1  deploy-contracts.bat  deploy-contracts.sh  environments.toml  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.cargo/: config.toml
contracts/: Cargo.toml  README.md
contracts/src/: credit_scoring.rs  identity_registry.rs  lending_pool.rs  lib.rs  loan_manager.rs  mock_usdc.rs  test.rs
contracts/test_snapshots/credit_scoring/test/: test_credit_scoring.1.json
contracts/test_snapshots/identity_registry/test/: test_identity_registry.1.json
contracts/test_snapshots/loan_manager/test/: test_loan_manager_init.1.json
src/: App.css  App.tsx  main.tsx
src/components/: CounterControls.css  CounterControls.tsx  CounterDisplay.css  CounterDisplay.tsx  CreditScoreSection.css  CreditScoreSection.tsx  IdentitySection.css  IdentitySection.tsx  LoanManagerSection.css  LoanManagerSection.tsx  LoanetSection.css  LoanetSection.tsx  MockUSDCSection.css  MockUSDCSection.tsx  WalletButton.css  WalletButton.tsx
src/contexts/: WalletContext.tsx
src/hooks/: useCounter.ts  useCreditScoring.ts  useIdentityRegistry.ts  useLendingPool.ts  useLoanManager.ts  useMockUSDC.ts  useWallet.ts
src/utils/: ipfsHelpers.ts  sorobanHelpers.ts
(+1 files in other folders)
